--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,3 +1,4 @@
+<% cache [current_user, :user_info], skip_digest: true do %>
 <a href="<%= user_path(current_user) %>">
   <%= gravatar_for current_user, size: 52 %>
 </a>
@@ -10,3 +11,4 @@
 <span>
   <%= pluralize(current_user.microposts.count, "micropost") %>
 </span>
+<% end %>
